# honeypot

./: .gitignore  Dockerfile.back  Dockerfile.front  docker-compose.yaml  index.html
back/: Cargo.toml  rocket.toml
back/src/: .env  main.rs
back/src/db/: mod.rs
back/src/model/: mod.rs
front/: Cargo.toml  README.md  index.html
front/src/: main.rs
